# deer-flow

./: Makefile  main.py  pyproject.toml  server.py
src/: workflow.py
src/config/: __init__.py  configuration.py  tools.py
src/graph/: nodes.py
src/llms/: llm.py
src/podcast/graph/: script_writer_node.py  tts_node.py
src/ppt/graph/: ppt_generator_node.py  state.py
src/prompt_enhancer/graph/: enhancer_node.py
src/prompts/: planner_model.py  template.py
src/rag/: ragflow.py  retriever.py
src/server/: app.py  chat_request.py  mcp_request.py  mcp_utils.py  rag_request.py
src/tools/: decorators.py  python_repl.py  retriever.py  search.py  tts.py
src/tools/tavily_search/: tavily_search_api_wrapper.py  tavily_search_results_with_images.py
src/utils/: json_utils.py
tests/: conftest.py  test_state.py
tests/integration/: test_nodes.py  test_template.py  test_tts.py
tests/unit/crawler/: test_article.py  test_crawler_class.py
tests/unit/prompt_enhancer/graph/: test_builder.py  test_enhancer_node.py  test_state.py
tests/unit/server/: test_mcp_utils.py
tests/unit/tools/: test_python_repl.py  test_tavily_search_results_with_images.py
